[package]
name = "svojak-app"
version = "0.0.1"
description = "A quiz game with jack-black and hooks"
authors = ["HalavicH@gmail.com"]
license = "MIT"
repository = ""
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.3", features = [] }

[dependencies]
# Tauri framework
tauri = { version = "1.3", features = [ "dialog-all", "devtools", "shell-open"] }

# Pack parsing
serde = { version = "1.0", features = ["derive"] }
serde-xml-rs = "0.6"
serde_json = "1.0"
tempfile = "3.2"
zip = "0.6.6"
urlencoding = "2.1.2"
unic-normal = "0.9.0"

# Hub communication
reqwest = { version = "0.11", features = ["json"] }
tokio = { version = "1", features = ["full"] }
rocket = { version = "0.5.0-rc.3", features = ["json"] }
serialport = "4.2.0"
rgb = "0.8"
network-interface = "1.0.1"
rocket-client-addr = "0.5.2"

# Game context holding
lazy_static = "1.4.0"

# Misc
rand = "0.8"

# Infrastructure
log = "0.4.0"
env_logger = "0.10.0"
error-stack = "0.3.1"
thiserror = "1.0.40"
test-log = "0.2.8"
ansi-to-html = "0.1.3"

[features]
# this feature is used for production builds or when `devPath` points to the filesystem
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
